KUBE/Ingress-application/app4-react-rust-postgres/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4-backend-deployment
  namespace: app4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: avejlanjekar45/react-rust-postgres-backend
          ports:
            - containerPort: 8000
