KUBE/Ingress-application/app4-react-rust-postgres/k8s/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4-db-deployment
  namespace: app4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app4-db
  template:
    metadata:
      labels:
        app: app4-db
    spec:
      containers:
        - name: app4-db
          image: postgres:12-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          emptyDir: {}
