KUBE/Ingress-application/app4-react-rust-postgres/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: app4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: avejlanjekar45/react-rust-postgres-frontend
          ports:
            - containerPort: 80
