KUBE/Ingress-application/app4-react-rust-postgres/k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app4-backend-service
  namespace: app4
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
