KUBE/Ingress-application/app4-react-rust-postgres/k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app4-db-service
  namespace: app4
spec:
  selector:
    app: app4-db
  ports:
    - port: 5432
      targetPort: 5432
