KUBE/Ingress-application/app4-react-rust-postgres/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app4-frontend-ingress
  namespace: app4
spec:
  ingressClassName: nginx
  rules:
    - host: app4.avej.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app4-frontend-service
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app4-backend-ingress
  namespace: app4
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: app4.avej.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app4-backend-service
                port:
                  number: 8000
